app/components/Button/Button.css
@import '~app/styles/variables.css';

.button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  height: 2.3em;
  width: fit-content;
  padding: 5px 15px;
  box-shadow: var(--button-box-shadow);
  font-weight: 600;
  background-color: var(--button-background);
  color: var(--color-dark-gray-5);
  outline: none;
  border-radius: 6px;
  border: 1px solid var(--button-border);
  transition: 125ms cubic-bezier(0.33, 1, 0.68, 1);
  /* stylelint-disable value-list-comma-newline-after */
  transition-property: transform, color, background-color, border-color,
    box-shadow, opacity;

  &:focus-visible {
    box-shadow: 0 0 0 3px #9944;
  }

  &:disabled {
    box-shadow: initial;
    cursor: not-allowed;
    opacity: 0.5;
  }

  + .button {
    margin-left: 16px;
  }

  &:active:not(:disabled) {
    transform: translateY(1px);
  }

  > i,
  > ion-icon {
    margin-right: 7px;
  }

  > a {
    color: var(--color-dark-gray-3);
  }

  &:hover:not(:disabled) {
    background-color: var(--button-background-hover);
    border-color: var(--button-border-hover);
  }
}

.loading {
  margin-left: 8px;
}

.dark {
  background-color: var(--button-dark-background);
  border-color: var(--button-dark-border);
  color: var(--button-color);
  box-shadow: none;

  &.fa {
    color: var(--button-color);
  }

  &:focus-visible {
    box-shadow: 0 0 0 3px var(--button-dark-box-shadow-focus);
  }

  &:hover:not(:disabled) {
    background-color: var(--button-dark-background-hover);
    border-color: var(--button-dark-border-hover);
  }
}

.danger {
  background: none;
  box-shadow: none;
  color: var(--color-red-2);

  &:focus-visible {
    box-shadow: 0 0 0 3px var(--button-danger-box-shadow-focus);
  }

  &:disabled {
    color: var(--color-red-2);
    background: none;
  }

  &:hover:not(:disabled) {
    background-color: var(--color-red-2);
    border-color: var(--color-red-2);
    color: var(--button-color);
  }
}

.success {
  background-color: var(--button-success-background);
  border-color: var(--button-success-border);
  color: var(--button-color);
  box-shadow: none;

  &:focus-visible {
    box-shadow: 0 0 0 3px var(--button-success-box-shadow-focus);
  }

  &:hover:not(:disabled) {
    background-color: var(--button-success-background-hover);
    border-color: var(--button-success-border-hover);
  }
}

.flat {
  font-family: inherit;
  font-size: inherit;
  text-align: left;
  color: var(--lego-link-color);
  background: none;
  margin: 0;
  padding: 0;
  border: none;
  cursor: pointer;
}

.small {
  padding: 10px 15px;
  font-size: 0.8rem;
}

.normal {
  font-size: inherit;
}

.large {
  font-size: 1.4rem;
}

